<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content" >

                <View
                    android:layout_width="430dp"
                    android:layout_height="380dp"
                    android:layout_marginStart="-79dp"
                    android:layout_marginTop="-193dp"
                    android:background="@drawable/top_rounc_background_pink"/>

                <TextView
                    android:id="@+id/halamanDaftar_serviceAja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/serviceaja"
                    style="@style/serviceaja"
                    android:gravity="top" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/halamanDaftar_serviceAja"
                    android:layout_marginStart="20dp"
                    android:text="Registrasi Akun"
                    android:textSize="25sp"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/poppins_medium" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_person"
                    android:hint="Nama Lengkap" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/halamanDaftar_namaLengkap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_email"
                    android:hint="@string/email_address" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/halamanDaftar_alamatEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_call"
                    android:hint="@string/tel_number"
                    app:prefixText="(+62) - " >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/halamanDaftar_noTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="Minimal 8 karakter campuran huruf dan angka"
                    app:startIconDrawable="@drawable/ic_password"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/halamanDaftar_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_password"
                    android:hint="@string/confirm_password"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/halamanDaftar_konfirmasiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:imeOptions="actionDone" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/halamanDaftar_persetujuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/agree" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/halamanDaftar_btnDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:text="Daftar"
                    android:backgroundTint="@color/gray"
                    app:cornerRadius="15dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center"
                    android:text="@string/instantregister" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="50dp"
                        android:onClick="loginGmail"
                        android:scaleType="fitCenter"
                        android:src="@drawable/google_logo" />

                    <ImageButton
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:onClick="loginFB"
                        android:scaleType="fitCenter"
                        android:src="@drawable/facebook_logo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="Sudah Punya Akun?" />

                    <TextView
                        android:id="@+id/halamanDaftar_btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Masuk Sekarang"
                        android:textColor="@color/lightBlue" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>