...
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                android:hint="@string/email_address"
                style="@style/editTextBaseStyle" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/halamanLogin_inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext" />

...
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password"
                style="@style/editTextBaseStyle"
                app:passwordToggleEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/halamanLogin_inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword"
                    android:imeOptions="actionSend"
                    android:imeActionLabel="Masuk" />
...
                android:gravity="end"
                android:text="@string/lupa_password"
                android:textColor="@color/lightBlue"
                android:fontFamily="@font/poppins_medium"
                android:onClick="forget"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/halamanLogin_btnMasuk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/masuk"
                android:backgroundTint="@color/gray"
                app:cornerRadius="15dp"
...
