...
        android:textSize="15sp"
        android:textColor="@color/darkBlue"
        android:gravity="center_vertical"
        android:fontFamily="@font/poppins_light"/>

    <Button
        android:id="@+id/halamanAwal_btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="448dp"
...
        android:layout_marginEnd="50dp"
        android:text="Belum Punya Akun?"
        android:fontFamily="@font/poppins_light"
        android:gravity="bottom"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/halamanAwal_btnDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
...
